# zyro

./: .env  .gitignore  Cargo.toml  zyro.sqlite
api/: Cargo.toml
api/src/: lib.rs
api/src/api/: mod.rs  sys_api_api.rs  sys_dictionary_api.rs  sys_dictionary_detail_api.rs  sys_menu_api.rs  sys_role_api.rs  sys_role_menu_api.rs  sys_user_api.rs  sys_user_role_api.rs
api/src/demo/: api_test.http  mod.rs  sys_role_api.rs
api/src/model/: mod.rs
api/src/system/: mod.rs  sys_role_api.rs  sys_user_api.rs
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/model/: mod.rs  posts.rs  prelude.rs  sys_api.rs  sys_dictionary.rs  sys_dictionary_detail.rs  sys_menu.rs  sys_role.rs  sys_role_menu.rs  sys_user.rs  sys_user_role.rs
entity/src/test/: mod.rs
macros/: Cargo.toml
macros/src/: lib.rs  main.rs
macros/src/generate/: api.rs  def.rs  mod.rs  models.rs  utils.rs
macros/src/generate/api/: gen_add_fn.rs  gen_all_api.rs  gen_del_fn.rs  gen_edit_fn.rs  gen_list_fn.rs  gen_mod.rs  gen_one_fn.rs  mod.rs
migration/: Cargo.toml
migration/src/: init.sql  lib.rs  m20220101_000001_create_table.rs  main.rs
src/: main.rs
src/tests/: db_test.rs  mod.rs
zyro-core/: Cargo.toml
zyro-core/src/: main.rs
