[package]
name = "zyro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zyro-core = { path = "zyro-core" }
migration = { path = "migration" }

[workspace]
members = [
    "zyro-core",
    "migration",
]

[workspace.dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
sea-orm = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }