[package]
name = "zyro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zyro-api = { path = "api" }


[workspace]
members = [
    "migration",
    "entity",
    "api"
]

[workspace.dependencies]
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = "0.3.18"
sea-orm = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
serde = "1.0.193"
dotenv = "0.15.0"