[package]
name = "zyro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "api" }
entity = { path = "entity" }
migration = {path = "migration"}
sea-orm = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.34.0", features = ["full"] }

[workspace]
members = [
    "migration",
    "entity",
    "macros",
    "api"
]

[workspace.dependencies]
# web
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# 数据库
sea-orm = { version = "0.12.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
# 工具
serde = "1.0.193"
serde_json = "1.0.110"
chrono = "0.4.31"
# 环境
dotenv = "0.15.0"
# 宏
proc-macro2 = "1.0.71"
syn = { version = "2.0.43" , features = ["full"] }
quote = "1.0.33"